--- a/stackOverView/src/main/res/values/strings.xml
+++ b/stackOverView/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="invalid_charger_text">Use only the supplied charger.</string>
 
     <!-- When the battery is low, this is the label of the button to go to the
-         power usage activity to find out what drained the battery.  [CHAR LIMIT=30] -->
+         power usuivity to find out what drained the battery.  [CHAR LIMIT=30] -->
     <string name="battery_low_why">Settings</string>
 
     <!-- Battery saver confirmation dialog title [CHAR LIMIT=NONE]-->
