--- a/map/src/main/res/values/strings.xml
+++ b/map/src/main/res/values/strings.xml
@@ -10,5 +10,28 @@
         <item name="basic_map">Location定位</item>
         <item name="basic_map">Location小蓝点功能</item>
         <item name="basic_map">Catches</item>
+        <item name="basic_map">使用高德地图仿最新版微信发送位置实现</item>
     </string-array>
+
+
+
+    <!-- catches -->
+    <string name="SpotHome_Edit_Edit">编辑钓点</string>
+    <string name="SpotHome_Edit_Delete">删除钓点</string>
+    <string name="SpotHome_Edit_DeleteTip">你确定要删除该钓点吗？</string>
+    <string name="SpotHome_Edit_EnterSpotName">请填写地点名称</string>
+    <string name="SpotHome_markedNavigate_TencentMap">腾讯地图</string>
+    <string name="SpotHome_markedNavigate_GoogleMap">谷歌地图</string>
+    <string name="SpotHome_markedNavigate_CurrentLocation">当前位置</string>
+    <string name="SpotHome_markedNavigate_BaiduMap">百度地图</string>
+    <string name="SpotHome_MarkedWeather_LowestTide">最低潮</string>
+    <string name="SpotHome_MarkedWeather_HighestTide">最高潮</string>
+    <string name="SpotHome_Create_HasExisted">该钓点已存在</string>
+    <string name="SpotHome_Create_LongPressToCreate">长按地图，新建钓点</string>
+    <string name="SpotHome_Create_Longtitude">经度</string>
+    <string name="SpotHome_Create_Lantitude">纬度</string>
+    <string name="SpotHome_Create_SpotName">请输入钓点名称</string>
+    <string name="SpotHome_Create_Create">创建新钓点</string>
+    <string name="SpotHome_Create_NewSpot">新建钓点</string>
+    <string name="SpotHome_MarkedLocation_Marked">已标记位置</string>
 </resources>
