高德父类图

--- a/map/src/main/res/values/strings.xml
+++ b/map/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
         <item name="basic_map">Location小蓝点功能</item>
         <item name="basic_map">Catches</item>
         <item name="basic_map">使用高德地图仿最新版微信发送位置实现</item>
+        <item name="basic_map">摩拜开场</item>
     </string-array>
 
 
