--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,11 @@
     <string name="didi_splash_message">美好一天，平安出行 </string>
     <!-- end didi -->
 
-
+    <!-- pdf down -->
+    <string name="action_settings">Settings</string>
+    <string name="pdf_url">PDF URL</string>
+    <string name="permission_request_message">Storage permission allows us to save pdf.</string>
+    <!-- pdf down end-->
 
 
 </resources>
