--- a/wan/src/main/res/values/strings.xml
+++ b/wan/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="accept">Accept</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    <string name="save">Save</string>
     <!-- 4 tab -->
     <string name="tab_home">Home</string>
     <string name="tab_hierarchy">Hierarchy</string>
@@ -36,4 +37,6 @@
     <string name="setting_language">Language</string>
     <string name="simplified_chinese">SimplifiedChinese</string>
     <string name="america_english">America English</string>
+    <!-- other -->
+    <string name="viewpager_indicator">%1$d/%2$d</string>
 </resources>
