--- a/basic_res/src/main/res/values/strings.xml
+++ b/basic_res/src/main/res/values/strings.xml
@@ -54,4 +54,8 @@
 
     <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
     <string name="common_no_more_data">没有更多数据了</string>
+
+    <!-- 升级对话框 -->
+    <string name="update_title">发现新版本</string>
+    <string name="update_content">更新内容</string>
 </resources>
